feat(customer): add subscription info to show
